# NM

./: README.md
MatrixOps/include/: matrixops.h  tridiagonal_matrix.h
MatrixOps/src/: matrix.cpp  tridiagonal_matrix.cpp
lab1/: CMakeLists.txt  main.cpp  task1_1.txt  task1_2.txt  task1_3.txt  task1_4.txt  task1_5.txt
lab1/MatrixOps/: CMakeLists.txt
lab1/lib/: matrix.cpp  matrix.h  matrixops.cpp  matrixops.h  sparse_matrix.cpp  sparse_matrix.h
lab2/: CMakeLists.txt  main.cpp  task2_1.txt  task2_2.txt
lab2/include/: function.h  methods.h
lab2/src/: function.cpp  methods.cpp
lab3/: CMakeLists.txt  main.cpp  task3_1.txt  task3_2.txt  task3_2_graph.py  task3_3.txt  task3_3_graph.py  task3_4.txt
lab3/include/: approximators.h  derivative.h  integral.h  interpolators.h
lab3/src/: approximators.cpp  derivative.cpp  integral.cpp  interpolators.cpp
lab4/: CMakeLists.txt  main.cpp
lab4/include/: cauchyproblemsolvers.h
lab4/src/: cauchyproblemsolvers.cpp
lab5/: CMakeLists.txt  main.cpp  plotter.py
lab5/lib/: CMakeLists.txt
lab5/lib/include/: parabolic_dif_eq_solver.h
lab5/lib/src/: parabolic_dif_eq_solver.cpp
lab6/: CMakeLists.txt  main.cpp  plotter.py
lab6/lib/: CMakeLists.txt
lab6/lib/include/: hyperbolic_dif_eq_solver.h
lab6/lib/src/: hyperbolic_dif_eq_solver.cpp
lab7/: CMakeLists.txt  main.cpp  plotter.py
lab7/lib/: CMakeLists.txt
lab7/lib/include/: elliptic_eq_solver.h
lab7/lib/src/: elliptic_eq_solver.cpp
lab8/: CMakeLists.txt  main.cpp  plotter.py
lab8/lib/: CMakeLists.txt
lab8/lib/include/: 2d_eq_solver.h
(+1 files in other folders)
